--- a/css/design_colour_scheme.css
+++ b/css/design_colour_scheme.css
@@ -7,24 +7,28 @@ body {
 
 .navbar {
     display: flex;
-    justify-content: center; 
+    justify-content: space-between; 
     align-items: center;
     background-color: #19443C; 
     color: #F3F3E4; 
-    padding: 10px 20px;
+    padding: 10px 10px;
     font-size: 22px;
     font-weight: bold;
-    height: 50px;
+    height: 40px;
     position: relative;
 }
 
+.welcome {
+    margin-left: 20px; 
+    font-size: 18px;
+}
 
 h1 {
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
     font-size: 30px;
-    white-space: nowrap; 
+    white-space: nowrap;
 }
 
 .user-menu {
@@ -34,6 +38,7 @@ h1 {
     transform: translateY(-50%);
     z-index: 9999; 
 }
+
 
 
 #user-btn {
@@ -73,7 +78,7 @@ h1 {
     color: #F3F3E4; 
     border-radius: 12px;
     padding: 12px;
-    width: 100px;
+    width: 90px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
     display: none;
     text-align: center;
@@ -96,7 +101,7 @@ h1 {
 .dropdown-menu hr {
     border: 0;
     height: 1px;
-    background-color: #ffffff60;
+    background-color: #19443C; 
     margin: 6px 0;
 }
 
@@ -117,6 +122,7 @@ h1 {
     font-size: 14px;
     color: beige;
 }
+
 
 
 section {
@@ -184,8 +190,9 @@ h3{
 }
 
 .view-btn:hover {
-    background-color: #183d2d;
+    background-color: #14352f; 
 }
+
 
 
 .embossed-btn {
